unpackaged/main/default/objects/Account/fields/Allergies_to_Medications__c.field-meta.xml
<CustomField>
    <fullName>Allergies_to_Medications__c</fullName>
    <description>Do you have any allergies to medications?</description>
    <inlineHelpText>Do you have any allergies to medications?</inlineHelpText>
    <label>Allergies to Medications</label>
    <type>TextArea</type>
</CustomField>