unpackaged/main/default/objects/Account/fields/Anaphylaxis__c.field-meta.xml
<CustomField>
    <fullName>Anaphylaxis__c</fullName>
    <description>Have you ever had anaphylaxis?</description>
    <inlineHelpText>Have you ever had anaphylaxis?</inlineHelpText>
    <label>Anaphylaxis</label>
    <type>TextArea</type>
</CustomField>