unpackaged/main/default/objects/Account/fields/Blood_Test_Count__c.field-meta.xml
<CustomField>
    <fullName>Blood_Test_Count__c</fullName>
    <label>Blood Test Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>