unpackaged/main/default/objects/Account/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <description>Calculated BMI based on height and weight fields</description>
    <formula>(Weight_kg__pc /  Height_cm__c  / Height_cm__c ) * 10000</formula>
    <inlineHelpText>Calculated BMI based on height and weight fields</inlineHelpText>
    <label>BMI</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>