unpackaged/main/default/objects/Account/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unable to afford</fullName>
            </value>
            <value>
                <fullName>Unhappy with service</fullName>
            </value>
            <value>
                <fullName>Poor response to treatment</fullName>
            </value>
            <value>
                <fullName>Unstable HCT</fullName>
            </value>
            <value>
                <fullName>Moved abroad</fullName>
            </value>
            <value>
                <fullName>Other medical reason</fullName>
            </value>
            <value>
                <fullName>No response from patient</fullName>
            </value>
            <value>
                <fullName>Stopped paying subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>