unpackaged/main/default/objects/Account/fields/Cardiovascular_disease__c.field-meta.xml
<CustomField>
    <fullName>Cardiovascular_disease__c</fullName>
    <description>Do you have any cardiovascular disease?</description>
    <inlineHelpText>Do you have any cardiovascular disease?</inlineHelpText>
    <label>Cardiovascular disease</label>
    <type>TextArea</type>
</CustomField>