unpackaged/main/default/objects/Account/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <defaultValue>&quot;Optimale&quot;</defaultValue>
    <description>Which sales channel/Optimale business is providing the service?</description>
    <inlineHelpText>Which sales channel/Optimale business is providing the service?</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channels</valueSetName>
    </valueSet>
</CustomField>