unpackaged/main/default/objects/Account/fields/Current_Medication_Dosage__c.field-meta.xml
<CustomField>
    <fullName>Current_Medication_Dosage__c</fullName>
    <label>Current Medication / Dosage</label>
    <type>TextArea</type>
</CustomField>