unpackaged/main/default/objects/Account/fields/Date_of_1st_blood_test_purchase__c.field-meta.xml
<CustomField>
    <fullName>Date_of_1st_blood_test_purchase__c</fullName>
    <label>Date of 1st blood test purchase</label>
    <type>Date</type>
</CustomField>