unpackaged/main/default/objects/Account/fields/Date_of_last_Doctor_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_Doctor_Review__c</fullName>
    <inlineHelpText>Date of last Doctor Review Consultation</inlineHelpText>
    <label>Date of last Doctor Review</label>
    <summarizedField>Consultation_Form__c.Consultation_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Consultation_Form__c.Consultation_Type__c</field>
        <operation>equals</operation>
        <value>3 month follow up, 6+ month follow up, Additional follow up</value>
    </summaryFilterItems>
    <summaryForeignKey>Consultation_Form__c.Patient__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>