unpackaged/main/default/objects/Account/fields/Delivery_Service_Preference__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Service_Preference__c</fullName>
    <label>Delivery Service Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DPD</fullName>
            </value>
            <value>
                <fullName>Royal Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>