unpackaged/main/default/objects/Account/fields/Details_of_previous_TRT_AAS_use__c.field-meta.xml
<CustomField>
    <fullName>Details_of_previous_TRT_AAS_use__c</fullName>
    <label>Details of previous TRT/AAS use</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>