unpackaged/main/default/objects/Account/fields/Email_Concatenation_1__c.field-meta.xml
<CustomField>
    <fullName>Email_Concatenation_1__c</fullName>
    <description>Field to concatenate Email 1 and Email 2 - used for duplicate matching</description>
    <inlineHelpText>Field to concatenate Email 1 and Email 2 - used for duplicate matching</inlineHelpText>
    <label>Email Concatenation 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>