unpackaged/main/default/objects/Account/fields/Email_Concatenation_2__c.field-meta.xml
<CustomField>
    <fullName>Email_Concatenation_2__c</fullName>
    <description>Field to concatenate Email 2 and Email 1 - used for duplicate matching</description>
    <inlineHelpText>Field to concatenate Email 2 and Email 1 - used for duplicate matching</inlineHelpText>
    <label>Email Concatenation2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>