unpackaged/main/default/objects/Account/fields/Email_Concatenation_3__c.field-meta.xml
<CustomField>
    <fullName>Email_Concatenation_3__c</fullName>
    <description>Field to display Email 2 if it exists, otherwise Email 1</description>
    <label>Email Concatenation 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>