unpackaged/main/default/objects/Account/fields/Endocrine_Issues__c.field-meta.xml
<CustomField>
    <fullName>Endocrine_Issues__c</fullName>
    <description>Do you have any endocrine issues?</description>
    <inlineHelpText>Do you have any endocrine issues?</inlineHelpText>
    <label>Endocrine Issues</label>
    <type>TextArea</type>
</CustomField>