unpackaged/main/default/objects/Account/fields/Exclude_from_Blood_Test_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Blood_Test_Reminders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclude this patient from automated blood test reminders, for example if they are not a TRT patient and are on ED meds only</description>
    <inlineHelpText>Exclude this patient from automated blood test reminders, for example if they are not a TRT patient and are on ED meds only</inlineHelpText>
    <label>Exclude from Blood Test Reminders?</label>
    <type>Checkbox</type>
</CustomField>