unpackaged/main/default/objects/Account/fields/Family_History__c.field-meta.xml
<CustomField>
    <fullName>Family_History__c</fullName>
    <label>Family History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>