unpackaged/main/default/objects/Account/fields/FB_fbclid_value__c.field-meta.xml
<CustomField>
    <fullName>FB_fbclid_value__c</fullName>
    <label>FB fbclid value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>