unpackaged/main/default/objects/Account/fields/FB_URL_with_fbclid__c.field-meta.xml
<CustomField>
    <fullName>FB_URL_with_fbclid__c</fullName>
    <label>FB URL with fbclid</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>