unpackaged/main/default/objects/Account/fields/FB_Visited_with_fbclid__c.field-meta.xml
<CustomField>
    <fullName>FB_Visited_with_fbclid__c</fullName>
    <label>FB Visited with fbclid</label>
    <type>DateTime</type>
</CustomField>