unpackaged/main/default/objects/Account/fields/First_Consultation__c.field-meta.xml
<CustomField>
    <fullName>First_Consultation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Consultation</label>
    <referenceTo>Consultation_Form__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>