unpackaged/main/default/objects/Account/fields/First_Consultation_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Consultation_Date__c</fullName>
    <label>First Consultation Date</label>
    <type>Date</type>
</CustomField>