unpackaged/main/default/objects/Account/fields/Gastrointestinal_disease__c.field-meta.xml
<CustomField>
    <fullName>Gastrointestinal_disease__c</fullName>
    <description>Do you have any gastrointestinal disease?</description>
    <inlineHelpText>Do you have any gastrointestinal disease?</inlineHelpText>
    <label>Gastrointestinal disease</label>
    <type>TextArea</type>
</CustomField>