unpackaged/main/default/objects/Account/fields/Genetic_disease_or_diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Genetic_disease_or_diagnosis__c</fullName>
    <description>Do you have any genetic disease or diagnosis?</description>
    <inlineHelpText>Do you have any genetic disease or diagnosis?</inlineHelpText>
    <label>Genetic disease or diagnosis</label>
    <type>TextArea</type>
</CustomField>