unpackaged/main/default/objects/Account/fields/Haematological_blood_disorders__c.field-meta.xml
<CustomField>
    <fullName>Haematological_blood_disorders__c</fullName>
    <description>Do you have any haematological (blood disorders)?</description>
    <inlineHelpText>Do you have any haematological (blood disorders)?</inlineHelpText>
    <label>Haematological (blood disorders)</label>
    <type>TextArea</type>
</CustomField>