unpackaged/main/default/objects/Account/fields/Height_cm__c.field-meta.xml
<CustomField>
    <fullName>Height_cm__c</fullName>
    <description>Calculated height in cm based on height in feet and inches</description>
    <formula>(Height_Feet__pc * 12 + Height_Inches__pc) * 2.54</formula>
    <inlineHelpText>Calculated height in cm based on height in feet and inches</inlineHelpText>
    <label>Height (cm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>