unpackaged/main/default/objects/Account/fields/Initial_Consultation_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Consultation_Date__c</fullName>
    <label>Initial Consultation Date</label>
    <type>Date</type>
</CustomField>