unpackaged/main/default/objects/Account/fields/Is_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Portal_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field set by trigger when a Community User is created</inlineHelpText>
    <label>Is Portal User</label>
    <type>Checkbox</type>
</CustomField>