unpackaged/main/default/objects/Account/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>Patient&#39;s Job Description</description>
    <inlineHelpText>Patient&#39;s Job Description</inlineHelpText>
    <label>Job Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>