unpackaged/main/default/objects/Account/fields/Kidney_urinary_or_bladder_disease__c.field-meta.xml
<CustomField>
    <fullName>Kidney_urinary_or_bladder_disease__c</fullName>
    <description>Do you have any kidney, urinary or bladder disease?</description>
    <inlineHelpText>Do you have any kidney, urinary or bladder disease?</inlineHelpText>
    <label>Kidney, urinary or bladder disease</label>
    <type>TextArea</type>
</CustomField>