unpackaged/main/default/objects/Account/fields/Lead_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Lead_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Doctor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Doctor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>