unpackaged/main/default/objects/Account/fields/Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage__c</fullName>
    <description>Lifecycle Stage drives type of Email/SMS</description>
    <formula>IF(((TODAY()-Treatment_Start_Date__c)/30.417) &lt;= 1.4,&quot;A&quot;,
IF(((TODAY()-Treatment_Start_Date__c)/30.417) &lt;= 3,&quot;B&quot;,
IF(((TODAY()-Treatment_Start_Date__c)/30.417) &lt;= 6,&quot;C&quot;,
IF(((TODAY()-Treatment_Start_Date__c)/30.417) &lt;= 12,&quot;D&quot;,
IF(((TODAY()-Treatment_Start_Date__c)/30.417) &gt; 12,&quot;E&quot;,NULL
			)
			)
			)
			)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifecycle Stage</label>
    <type>Text</type>
</CustomField>