unpackaged/main/default/objects/Account/fields/Liver_disease__c.field-meta.xml
<CustomField>
    <fullName>Liver_disease__c</fullName>
    <description>Do you have any liver disease?</description>
    <inlineHelpText>Do you have any liver disease?</inlineHelpText>
    <label>Liver disease</label>
    <type>TextArea</type>
</CustomField>