unpackaged/main/default/objects/Account/fields/Medication_Hold__c.field-meta.xml
<CustomField>
    <fullName>Medication_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Hold medications until outstanding investigations, follow up bloods or reviews are complete</inlineHelpText>
    <label>Medication Hold</label>
    <type>Checkbox</type>
</CustomField>