unpackaged/main/default/objects/Account/fields/Meds_Hold__c.field-meta.xml
<CustomField>
    <fullName>Meds_Hold__c</fullName>
    <formula>IF ( Medication_Hold__c  = TRUE, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;),&quot;&quot;)</formula>
    <inlineHelpText>Flag if Medications Hold is ticked</inlineHelpText>
    <label>Meds Hold</label>
    <type>Text</type>
</CustomField>