unpackaged/main/default/objects/Account/fields/Mental_health_diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Mental_health_diagnosis__c</fullName>
    <description>Do you have any mental health diagnosis?</description>
    <inlineHelpText>Do you have any mental health diagnosis?</inlineHelpText>
    <label>Mental health diagnosis</label>
    <type>TextArea</type>
</CustomField>