unpackaged/main/default/objects/Account/fields/Neurological_disease__c.field-meta.xml
<CustomField>
    <fullName>Neurological_disease__c</fullName>
    <description>Do you have any neurological disease?</description>
    <inlineHelpText>Do you have any neurological disease?</inlineHelpText>
    <label>Neurological disease</label>
    <type>TextArea</type>
</CustomField>