unpackaged/main/default/objects/Account/fields/Next_Blood_Test_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Next_Blood_Test_Reminder__c</fullName>
    <description>Date of next scheduled blood test reminder</description>
    <inlineHelpText>Date of next scheduled blood test reminder</inlineHelpText>
    <label>Next Blood Test Reminder</label>
    <type>Date</type>
</CustomField>