unpackaged/main/default/objects/Account/fields/Next_QAdam_Survey__c.field-meta.xml
<CustomField>
    <fullName>Next_QAdam_Survey__c</fullName>
    <label>Next QAdam Survey</label>
    <type>Date</type>
</CustomField>