unpackaged/main/default/objects/Account/fields/OI_Flag__c.field-meta.xml
<CustomField>
    <fullName>OI_Flag__c</fullName>
    <formula>IF (Outstanding_Investigations__c = TRUE, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;),&quot;&quot;)</formula>
    <inlineHelpText>Flag to indicate whether there are Oustanding Investigations</inlineHelpText>
    <label>OI Flag</label>
    <type>Text</type>
</CustomField>