unpackaged/main/default/objects/Account/fields/Opportunity_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Won_Date__c</fullName>
    <label>Opportunity Won Date</label>
    <type>Date</type>
</CustomField>