unpackaged/main/default/objects/Account/fields/Optimale_Plan__c.field-meta.xml
<CustomField>
    <fullName>Optimale_Plan__c</fullName>
    <label>Optimale Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plans</valueSetName>
    </valueSet>
</CustomField>