unpackaged/main/default/objects/Account/fields/Outstanding_Investigations__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Investigations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Patient has outstanding investigations that need to be regularly chased</description>
    <inlineHelpText>Patient has outstanding investigations that need to be regularly chased</inlineHelpText>
    <label>Outstanding Investigations?</label>
    <type>Checkbox</type>
</CustomField>