unpackaged/main/default/objects/Account/fields/Outstanding_Investigations_Notes__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Investigations_Notes__c</fullName>
    <description>Notes on any outstanding investigations that need to be chased up or monitored</description>
    <inlineHelpText>Notes on any outstanding investigations that need to be chased up or monitored</inlineHelpText>
    <label>Outstanding Investigations Notes</label>
    <type>TextArea</type>
</CustomField>