unpackaged/main/default/objects/Account/fields/Patient_History_ID_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>Patient_History_ID_Request_Form__c</fullName>
    <description>Online form to send to Patient for them to update their Patient History and submit ID</description>
    <inlineHelpText>Online form to send to Patient for them to update their Patient History and submit ID</inlineHelpText>
    <label>Patient History &amp; ID Request Form</label>
    <type>Url</type>
</CustomField>