unpackaged/main/default/objects/Account/fields/Patient_History_Update_Form__c.field-meta.xml
<CustomField>
    <fullName>Patient_History_Update_Form__c</fullName>
    <description>Online form to send to Patient for them to update their Patient History</description>
    <inlineHelpText>Online form to send to Patient for them to update their Patient History</inlineHelpText>
    <label>Patient History Update Form</label>
    <type>Url</type>
</CustomField>