unpackaged/main/default/objects/Account/fields/Previous_use_of_TRT_or_AAS__c.field-meta.xml
<CustomField>
    <fullName>Previous_use_of_TRT_or_AAS__c</fullName>
    <description>Has the patient previously used TRT or AAS?</description>
    <inlineHelpText>Has the patient previously used TRT or AAS?</inlineHelpText>
    <label>Previous use of TRT or AAS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previous TRT</fullName>
            </value>
            <value>
                <fullName>Previous AAS</fullName>
            </value>
            <value>
                <fullName>Both previously</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>