unpackaged/main/default/objects/Account/fields/Requires_complex_consultation__c.field-meta.xml
<CustomField>
    <fullName>Requires_complex_consultation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>eg High BMI, complex conditions</inlineHelpText>
    <label>Requires complex consultation</label>
    <type>Checkbox</type>
</CustomField>