unpackaged/main/default/objects/Account/fields/Respiratory_problems__c.field-meta.xml
<CustomField>
    <fullName>Respiratory_problems__c</fullName>
    <description>Do you have any respiratory problems?</description>
    <inlineHelpText>Do you have any respiratory problems?</inlineHelpText>
    <label>Respiratory problems</label>
    <type>TextArea</type>
</CustomField>