unpackaged/main/default/objects/Account/fields/Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>Risk_Flag__c</fullName>
    <formula>IF (TEXT(Risk_Level__c) = &quot;High&quot;,

IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;),

IF (TEXT(Risk_Level__c) = &quot;Medium&quot;,

IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow Flag&quot;),

IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green Flag&quot;)))</formula>
    <inlineHelpText>Risk Level Flag - Red = High, Yellow = Medium, Green = Low</inlineHelpText>
    <label>Risk Flag</label>
    <type>Text</type>
</CustomField>