unpackaged/main/default/objects/Account/fields/Risk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Risk_Notes__c</fullName>
    <description>Notes on any patient risk factors that should be noted</description>
    <inlineHelpText>Notes on any patient risk factors that should be noted</inlineHelpText>
    <label>Risk Notes</label>
    <type>TextArea</type>
</CustomField>