unpackaged/main/default/objects/Account/fields/Sexuality__c.field-meta.xml
<CustomField>
    <fullName>Sexuality__c</fullName>
    <label>Sexuality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heterosexual</fullName>
            </value>
            <value>
                <fullName>Homosexual</fullName>
            </value>
            <value>
                <fullName>Bisexual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>