unpackaged/main/default/objects/Account/fields/Treatment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Start_Date__c</fullName>
    <description>Date that the Patient first started treatment with OptiMale</description>
    <inlineHelpText>Date that the Patient first started treatment with OptiMale</inlineHelpText>
    <label>Treatment Start Date</label>
    <type>Date</type>
</CustomField>