unpackaged/main/default/objects/Account/fields/Treatment_Start_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Start_Reminder_Date__c</fullName>
    <description>Date upon which Patient has requested Treatment to start (if not immediate)</description>
    <inlineHelpText>Date upon which Patient has requested Treatment to start (if not immediate)</inlineHelpText>
    <label>Treatment Start Reminder Date</label>
    <type>Date</type>
</CustomField>