unpackaged/main/default/objects/Account/fields/UTM_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>UTM_Conversion_Date__c</fullName>
    <label>UTM Conversion Date</label>
    <type>DateTime</type>
</CustomField>