unpackaged/main/default/objects/Account/fields/UTM_Conversion_Lag__c.field-meta.xml
<CustomField>
    <fullName>UTM_Conversion_Lag__c</fullName>
    <label>UTM Conversion Lag</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>