unpackaged/main/default/objects/Account/fields/UTM_First_Website_Referrer__c.field-meta.xml
<CustomField>
    <fullName>UTM_First_Website_Referrer__c</fullName>
    <label>UTM First Website Referrer</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>