unpackaged/main/default/objects/Account/fields/UTM_URL__c.field-meta.xml
<CustomField>
    <fullName>UTM_URL__c</fullName>
    <label>UTM URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>