unpackaged/main/default/objects/Account/fields/UTM_Visited__c.field-meta.xml
<CustomField>
    <fullName>UTM_Visited__c</fullName>
    <label>UTM Visited</label>
    <type>DateTime</type>
</CustomField>