unpackaged/main/default/objects/Account/fields/Won_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Won_Opportunity_Type__c</fullName>
    <label>Won Opportunity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>