unpackaged/main/default/objects/Account/fields/WonOpportunity__c.field-meta.xml
<CustomField>
    <fullName>WonOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Won Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>