unpackaged/main/default/objects/Account/recordTypes/Original.recordType-meta.xml
<RecordType>
    <fullName>Original</fullName>
    <active>true</active>
    <label>Original</label>
</RecordType>