unpackaged/main/default/objects/Account/validationRules/Person_Accounts_in_Lost_Need_Canx_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Person_Accounts_in_Lost_Need_Canx_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsPersonAccount=true,ISPICKVAL( Patient_Status__pc,&quot;Lost&quot;),ISBLANK( Cancellation_Date__c),
$Profile.Name &lt;&gt;&#39;System Administrator&#39;,
$Profile.Name &lt;&gt;&#39;Integration Admin&#39;)</errorConditionFormula>
    <errorMessage>Patients in Status of &#39;Lost&#39; must have a Cancellation Date</errorMessage>
</ValidationRule>