unpackaged/main/default/objects/Account/validationRules/Require_cancellation_reason_for_lost_PT.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_cancellation_reason_for_lost_PT</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Patient_Status__pc) = &quot;Lost&quot;, ISBLANK(TEXT(Cancellation_Reason__c)),
$Profile.Name &lt;&gt;&#39;System Administrator&#39;,
$Profile.Name &lt;&gt;&#39;Integration Admin&#39;)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Please enter a cancellation reason for this patient</errorMessage>
</ValidationRule>