unpackaged/main/default/objects/Account/validationRules/Shipping_city_must_exist_if_street_exist.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_city_must_exist_if_street_exist</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsPersonAccount=true, ISBLANK( ShippingCity ),Not(ISBLANK( ShippingStreet)),
ISCHANGED(ShippingStreet))</errorConditionFormula>
    <errorDisplayField>ShippingStreet</errorDisplayField>
    <errorMessage>Please ensure all shipping fields are completed - do not enter all the shipping address in the shipping street field!</errorMessage>
</ValidationRule>