unpackaged/main/default/objects/Account/listViews/Accounts_past_prospect_stage.listView-meta.xml
<ListView>
    <fullName>Accounts_past_prospect_stage</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Patient_Status__pc</field>
        <operation>equals</operation>
        <value>Blood Test,Consultation,Approved,Current Patient</value>
    </filters>
    <label>Accounts Past Prospect Stage</label>
</ListView>