unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>Patient_ID__pc</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Patient_Status__pc</columns>
    <columns>Channel__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Treatment_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>