unpackaged/main/default/objects/Account/listViews/CJA_Balance_Patients.listView-meta.xml
<ListView>
    <fullName>CJA_Balance_Patients</fullName>
    <columns>Patient_ID__pc</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Patient_Status__pc</columns>
    <columns>Lead_Doctor__c</columns>
    <columns>Channel__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Channel__c</field>
        <operation>equals</operation>
        <value>CJA Balance</value>
    </filters>
    <filters>
        <field>Patient_Status__pc</field>
        <operation>equals</operation>
        <value>Current Patient</value>
    </filters>
    <label>CJA Balance Patients</label>
</ListView>