unpackaged/main/default/objects/Account/listViews/Current_Patients.listView-meta.xml
<ListView>
    <fullName>Current_Patients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Patient_ID__pc</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>Lifecycle_Stage__c</columns>
    <columns>Next_Blood_Test_Reminder__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Patient_Status__pc</field>
        <operation>equals</operation>
        <value>Current Patient</value>
    </filters>
    <label>Current Patients</label>
</ListView>