unpackaged/main/default/objects/Account/listViews/Lost_Patients.listView-meta.xml
<ListView>
    <fullName>Lost_Patients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Cancellation_Reason__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Patient_Status__pc</field>
        <operation>equals</operation>
        <value>Lost</value>
    </filters>
    <label>Lost Patients</label>
</ListView>